# Portabilidad-del-software-de-la-ICU-de-EPD-a-Zephyr

./: README.md
asw_pus_zephyr/: CMakeLists.txt  SalidaEsperada.txt  acronimos.txt  main.cpp  prj.conf  uah_asw_mmesp_project.cpp
asw_pus_zephyr/asw/components/ccbkgtcexec/src/: CCBKGTCExecB.cpp
asw_pus_zephyr/asw/components/cctcmanager/include/public/: cctcmanager_iface_v1.h
asw_pus_zephyr/asw/components/cctcmanager/src/: CCTCManagerB.cpp  CCTCManagerS.cpp
asw_pus_zephyr/asw/dataclasses/CDEvAction/include/public/: cdevaction.h
asw_pus_zephyr/asw/dataclasses/CDEvAction/src/: cdevaction.cpp
asw_pus_zephyr/asw/dataclasses/CDTCHandler/include/public/: bkg_executor.h  cdtchandler.h  hk_fdir_executor.h
asw_pus_zephyr/asw/dataclasses/CDTCHandler/src/: bkg_executor.cpp  cdtchandler.cpp  hk_fdir_executor.cpp
asw_pus_zephyr/llsw/config/include/public/: config.h
asw_pus_zephyr/llsw/device_drv/src/: emu_device_drv.c
asw_pus_zephyr/llsw/emu_gss/src/: emu_gss.cpp  emu_gss_pus_service03.cpp  emu_gss_pus_service12.cpp
asw_pus_zephyr/llsw/emu_hw_timecode_drv/src/: emu_hw_timecode_drv.cpp
asw_pus_zephyr/llsw/emu_sc_channel_drv/src/: emu_sc_channel_drv.cpp
asw_pus_zephyr/service_libraries/ccsds_pus/include/public/: ccsds_pus.h
asw_pus_zephyr/service_libraries/edroomsl/edroombp/include/: edroombp_config.h
asw_pus_zephyr/service_libraries/edroomsl/edroombp/include/public/: edroombp.h  edroombp_zephyr_wrapper.h
asw_pus_zephyr/service_libraries/edroomsl/edroombp/src/: edroombp.cpp  edroombp_zephyr_wrapper.cpp
asw_pus_zephyr/service_libraries/edroomsl/edroomsl/include/edroomsl/: edroomsl.h
asw_pus_zephyr/service_libraries/edroomsl/edroomsl/src/: edroomsl.cpp
asw_pus_zephyr/service_libraries/emu_tc_programming/: emu_tc_programming_st03.h
asw_pus_zephyr/service_libraries/emu_tc_programming/src/: emu_tc_programming_st03.cpp  emu_tc_programming_st128.cpp  emu_tc_programming_st19.cpp
asw_pus_zephyr/service_libraries/pus_services/pus_service01/src/: pus_service1.c  pus_verification.c
asw_pus_zephyr/service_libraries/pus_services/pus_service02/src/: pus_service2.c
asw_pus_zephyr/service_libraries/pus_services/pus_service03/src/: aux_pus_service3_exec_tc.c  aux_pus_service3_tx_tm.c  aux_pus_service3_utils.c  pus_service3.c
asw_pus_zephyr/service_libraries/pus_services/pus_service04/src/: aux_pus_service4_exec_tc.c  pus_service4.c
asw_pus_zephyr/service_libraries/pus_services/pus_service05/src/: aux_pus_service5_exec_tc.c
asw_pus_zephyr/service_libraries/pus_services/pus_service06/src/: aux_pus_service6_tc_exec.c
asw_pus_zephyr/service_libraries/pus_services/pus_service09/src/: aux_pus_sevice9_exec_tc.c
asw_pus_zephyr/service_libraries/pus_services/pus_service12/src/: aux_pus_service12_exec_tc.c  aux_pus_service12_tx_tm.c  pus_service12.c
asw_pus_zephyr/service_libraries/pus_services/pus_service128/src/: pus_service128.c
asw_pus_zephyr/service_libraries/pus_services/pus_service17/src/: pus_service17.c
asw_pus_zephyr/service_libraries/pus_services/pus_service19/src/: aux_pus_service19_exec_tc.c
asw_pus_zephyr/service_libraries/pus_services/pus_service20/src/: aux_pus_sevice20_exec_tc.c
asw_pus_zephyr/service_libraries/pus_services/pus_tc_handler/src/: pus_tc_handler.c
asw_pus_zephyr/service_libraries/pus_services/src/: pus_services.c
(+3 files in other folders)
